# econt_sw

./: .gitignore  .gitmodules  README.md  econ_i2c_setup.py  econ_i2c_test.py  econ_i2c_translate.py  i2c_basic.py  iic_test.c  setup.cfg  translator.py
econt_sw/: .gitignore  CMakeLists.txt  ITA_Testing.py  ProtonTherapy_Testing.py  README.md  TID_Testing.py  TS_unpack.py  XrayTID_Testing.py  align_links.py  align_read.sh  align_set.sh  asic_setup.md  check_all.sh  check_fc.sh  connection.xml  econ_i2c_setup.py  env.sh  fw_block_addresses.xml  fw_block_addresses_ASIC.xml  hexactrl_setup.MD  hexactrl_setup.md  pll_all.sh  pll_manual.sh  pll_set.sh  plot_script.py  set_all.sh  start_up.sh  test_i2c.py  test_power.py  translator.py  troubleshoot.md  unpack.py  webserver.py  zmq_align.py  zmq_controller.py
econt_sw/address_table/: connection.xml  fw_block_addresses.xml
econt_sw/address_table/modules/: Housekeeping-FastControl-fastcontrol-axi-0.xml  Housekeeping-FastControl-fastcontrol-recv-axi-0.xml  IO_axi_to_ipif.xml  IO_blocks_channel.xml  IO_blocks_global.xml  axi_bram_ctrl_channel.xml  eLink-outputs-eLink-outputs-0-ipif-switch-mux.xml  eLink_outputs_bram_ctrl.xml  eLink_outputs_bram_ctrl_channel.xml  eLink_outputs_ctrl.xml  eLink_outputs_ipif_stream_mux.xml  eLink_outputs_ipif_switch_mux.xml  eLink_outputs_mux_stream.xml  eLink_outputs_mux_switch.xml  eLink_outputs_switch_channel.xml  eLink_single_output_ctrl_channel.xml  fastcontrol_axi.xml  fastcontrol_axi_periodic.xml  fastcontrol_recv_axi.xml  from-ECONT-IO-IO-blocks-0.xml  from_IO_axi_to_ipif.xml  link-capture-link-capture-AXI-0.xml  link-capture-link-capture-AXI-0_global.xml  link_capture_axi.xml  link_capture_axi_bram.xml  link_capture_axi_channel.xml  link_capture_axi_global.xml  to-ECONT-IO-IO-blocks-0.xml
econt_sw/address_table_reference/: fw_block_addresses.xml
econt_sw/address_table_reference/modules/: ECONT-Emulator-axis-delay-0.xml  (+17 more)
econt_sw/address_table_reference_ASIC/: fw_block_addresses.xml
econt_sw/cmake/: FindCACTUS.cmake
econt_sw/configs/: ITA_defaults.yaml  ITA_defaults_AEmixed.yaml  ITA_defaults_AEzeros.yaml  ITA_defaults_threshold_0.yaml  ITA_init_align.yaml  align.yaml  alignOutput_TS.yaml  align_read.yaml  align_read_status.yaml  init-align_emulator.py  init.yaml  init_data.yaml  pll_set.yaml  prbs.yaml  prbs28.yaml  startup.yaml
econt_sw/debug_tools/: align_lowlevel.py  capture_on_ASIC.py  on_ASIC.py  on_tester.py  prbs15.py  sendbittransitions.py  setupIOdelay.py
econt_sw/gpib/: PowerSupplyControls.py  TestStand_Controls.py
econt_sw/python/: TS_unpack.py  align_links.py  align_snapshot.py  check_threshold.py  convertToHex.py  unpack.py
econt_sw/reg_maps/: ECON_I2C_params_regmap.yaml  ECON_I2C_params_test.yaml
econt_sw/scripts/: ASICsetup.sh  align_links.py  bypass.sh  bypassRPT.sh  checkOutputAlignment.sh  compareEmulator.sh  compare_unpacked_BC.py  compare_unpacked_TS.py  fpgaIOsetup.sh  fullSetup.sh  inputWordAlignment.sh  ioAlignment.sh  lcAlignment.sh  lcDebug.sh  lcEmulatorAlignment.sh  manualWordAlignment.sh  phaseScan.sh  quickASICSetup.sh  scanPhasePRBS.py  setup.sh  snapshotI2Ctriggered.sh  startUp.sh  zmq_controller.py
econt_sw/testing/: DN_i2c_single_register.py  I2C_freq.py  PLL.py  PLL_frequency.py  PRBS.py  align_links.py  align_links_0.py  align_links_1.py  align_links_test.py  align_on_ASIC.py  align_on_ASIC_1.py  align_on_ASIC_2.py  align_on_tester.py  align_on_tester_0.py  align_on_tester_1.py  align_on_tester_2.py  align_on_tester_3.py  aligner.py  basic_script_test.py  basic_test.py  capture.py  checkSnapshots.py  check_align.py  check_block.py  delay_scan.py  eRx.py  eRxMonitoring.py  eTx.py  eTxMonitoring.py  eventDAQ.py  fast_command.py  find_orb.py  fixedPattern.py  hexactrl_interface.py  i2c-all.py  i2c.py  i2c_read_write.py  i2c_set_address.py  i2c_single_register.py  i2c_uio.sh  (+48 more)
econt_sw/zmq_i2c/: align_links.py  econ_i2c.py  econ_i2c_setup.py  econ_interface.py  gbtsca_test.py  read_xcheck.py  simple_setup.py  startServers.sh  translator.py  zmq_client.py  zmq_server.py
(+84 files in other folders)
